--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+.env
+dbdata
 ### STS ###
 .apt_generated
 .classpath
