Added entities and populated locations db with json

--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,10 @@
             <artifactId>spring-dotenv</artifactId>
             <version>3.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+        </dependency>
 
     </dependencies>
 
