--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,13 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
-
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 50MB
 jwt:
   secret: ${JWT_SECRET}
+
+app:
+  upload:
+    dir: ${user.home}/pet-adoption/uploads/imagini
