--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,22 @@
             <version>1.15.3</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>ai.djl</groupId>
+            <artifactId>api</artifactId>
+            <version>0.26.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>ai.djl.onnxruntime</groupId>
+            <artifactId>onnxruntime-engine</artifactId>
+            <version>0.26.0</version>
+            <scope>runtime</scope>
+        </dependency>
+
+
     </dependencies>
 
 	<build>
