--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,35 @@
             <version>0.26.0</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>ai.djl.tensorflow</groupId>-->
+<!--            <artifactId>tensorflow-engine</artifactId>-->
+<!--            <version>0.26.0</version>-->
+<!--            <scope>runtime</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>ai.djl.tensorflow</groupId>-->
+<!--            <artifactId>tensorflow-model-zoo</artifactId>-->
+<!--            <version>0.26.0</version>-->
+<!--        </dependency>-->
+
+        <!-- Source: https://mvnrepository.com/artifact/ai.djl.pytorch/pytorch-engine -->
+        <dependency>
+            <groupId>ai.djl.pytorch</groupId>
+            <artifactId>pytorch-engine</artifactId>
+            <version>0.26.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+
+        <!-- Source: https://mvnrepository.com/artifact/ai.djl.pytorch/pytorch-native-cpu -->
+        <dependency>
+            <groupId>ai.djl.pytorch</groupId>
+            <artifactId>pytorch-native-cpu</artifactId>
+            <version>2.1.1</version>
+            <scope>compile</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>ai.djl.onnxruntime</groupId>
