--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
