--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,8 +2,7 @@ spring:
   application:
     name: adoptie
   datasource:
-    url: jdbc:postgresql://localhost:${DB_PORT}/${DB_NAME}
-    #change localhost to ${DB_HOST} for docker
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
   config:
@@ -26,7 +25,12 @@ jwt:
 
 app:
   upload:
-    dir: ${user.home}/pet-adoption/uploads/imagini
+#    dir: ${user.home}/pet-adoption/uploads/imagini
+      supabaseUrl: ${SUPABASE_URL}
+      supabaseAccessKey: ${ACCESS_KEY_ID}
+      supabaseSecretKey: ${SECRET_KEY_ACCESS}
+      bucket: ${DIR_NAME}
+      region: ${REGION}
 
 model:
   ai:
