--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 .env
-nsfw_model/*.onnx
+model/*.onnx
 ### dbdata
 ### STS ###
 .apt_generated
