--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,14 @@
             <version>2.20.0</version>
         </dependency>
 
+        <!-- Source: https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.18.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
 
     </dependencies>
