Added actuator healthcheck and env vars for frontend

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,3 +35,8 @@ app:
 model:
   ai:
     path: ./model/model.onnx
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics, loggers
