--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,10 @@
             <version>5.18.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
 
     </dependencies>
