--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
         <dependency>
             <groupId>ai.djl</groupId>
             <artifactId>api</artifactId>
-            <version>0.26.0</version>
+            <version>0.36.0</version>
         </dependency>
 
 <!--        <dependency>-->
@@ -129,29 +129,40 @@
 <!--            <version>0.26.0</version>-->
 <!--        </dependency>-->
 
-        <!-- Source: https://mvnrepository.com/artifact/ai.djl.pytorch/pytorch-engine -->
+
         <dependency>
             <groupId>ai.djl.pytorch</groupId>
             <artifactId>pytorch-engine</artifactId>
-            <version>0.26.0</version>
-            <scope>compile</scope>
+            <version>0.36.0</version>
+            <scope>runtime</scope>
         </dependency>
+
 
 
         <!-- Source: https://mvnrepository.com/artifact/ai.djl.pytorch/pytorch-native-cpu -->
         <dependency>
             <groupId>ai.djl.pytorch</groupId>
             <artifactId>pytorch-native-cpu</artifactId>
-            <version>2.1.1</version>
+            <version>2.7.1</version>
             <scope>compile</scope>
         </dependency>
 
 
+        <!-- Source: https://mvnrepository.com/artifact/com.microsoft.onnxruntime/onnxruntime -->
+        <dependency>
+            <groupId>com.microsoft.onnxruntime</groupId>
+            <artifactId>onnxruntime</artifactId>
+            <version>1.24.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- Source: https://mvnrepository.com/artifact/ai.djl.onnxruntime/onnxruntime-engine -->
+        <!-- Source: https://mvnrepository.com/artifact/ai.djl.onnxruntime/onnxruntime-engine -->
         <dependency>
             <groupId>ai.djl.onnxruntime</groupId>
             <artifactId>onnxruntime-engine</artifactId>
-            <version>0.26.0</version>
-            <scope>runtime</scope>
+            <version>0.36.0</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
