--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ spring:
     password: ${DB_PASSWORD}
   config:
     import: "optional:dotenv:.env"
+  main.banner-mode:
+    off
 
   jpa:
     hibernate:
@@ -15,7 +17,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    show-sql: true
+    show-sql: false
   servlet:
     multipart:
       max-file-size: 20MB
@@ -40,3 +42,5 @@ management:
     web:
       exposure:
         include: health, metrics, loggers
+
+
