--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.1.0</version>
+        </dependency>
+
+
     </dependencies>
 
 	<build>
